--- a/style.css
+++ b/style.css
@@ -2,18 +2,20 @@ body {
 		font-family: arial;
 }
 
-.sort {
+.button{
 	width: 4rem;
 	height: 3rem;
 	background-color: #7e6;
 	text-align: center;
+	float: left;
+	margin-left: 1rem;
 }
 
 
 #content {
 	width: 100%;
 
-
+	clear: both;
 
 }
 
