--- a/style.css
+++ b/style.css
@@ -2,27 +2,39 @@ body {
 		font-family: arial;
 }
 
+
 .button{
 	width: 6rem;
-	height: 3rem;
-	background-color: #7e6;
+	height: 1.5rem;
+	background-color: #333;
+	color: #fafafa;
 	text-align: center;
 	float: left;
-	margin-left: 1rem;
+	padding-top: .25rem;
+	margin-left: .5rem;
+	margin-bottom: .5rem;
+	border-radius: 5%; /* make div circle */
+}
+
+.button:hover{
+	background-color: #933;
 }
 
 
 #content {
-	width: 100%;
+	width: 90%;
+	float: left;
+}
 
-	clear: both;
-
+#controls{
+	width: 10%;
+	float: left;
 }
 
 .unit {
 	font-size: .8rem;
-	width: 4.5rem;
-	height: 4.5rem;
+	width: 4.25rem;
+	height: 4.25rem;
 	margin: .125rem;
 	background-color: #cccccc;
 
@@ -68,4 +80,10 @@ body {
 
 .australia {
 	background-color: #F9CEE4;
+}
+
+hr {
+	height: 1px;
+	border:0;
+	border-top: 1px solid #333;
 }
