--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body,html {
 .side {
 	background-color: #eaeaea;
 	width: 10%;
+	min-width: 10rem;
 	-ms-flex: 0 100px;
 	-webkit-box-flex:  0;
 	-moz-box-flex:  0;
@@ -116,6 +117,8 @@ body,html {
     flex-direction:column; /* column | row */
 }
 
+
+
 .asia {
 	background-color: #F6C4B9;
 }
@@ -146,5 +149,44 @@ body,html {
 
 .australia {
 	background-color: #F9CEE4;
+}
+
+/*hover info box*/
+.hoverbox{
+	z-index:99;
+	width: 200px;
+	height: 100px;
+	background-color: #fafafa;
+	position: absolute;
+
+	border-radius: 5%; /* make div circle */
+	-webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+	-moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+	box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+	border: #333 solid 1px;
+
+	font-size: .8rem;
+	padding: .5rem;
+}
+.hb_show{
+	-webkit-opacity: 1;
+	-moz-opacity: 1;
+	opacity: 1;
+	-webkit-transition: opacity .5s ease;
+	-moz-transition: opacity .5s ease;
+	-ms-transition: opacity .5s ease;
+	-o-transition: opacity .5s ease;
+	transition: opacity .5s ease;
+}
+
+.hb_hide {
+	-webkit-opacity: 0;
+	-moz-opacity: 0;
+	opacity: 0;
+	-webkit-transition: opacity .5s ease;
+	-moz-transition: opacity .5s ease;
+	-ms-transition: opacity .5s ease;
+	-o-transition: opacity .5s ease;
+	transition: opacity .5s ease;
 }
 /*main*/
