--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ body,html {
 
 
 /*sidebar*/
+
 .button{
 	float: left;
 	width: 100%;
@@ -117,40 +118,6 @@ body,html {
     flex-direction:column; /* column | row */
 }
 
-
-
-.asia {
-	background-color: #F6C4B9;
-}
-
-.africa {
-	background-color: #F2E798;
-}
-
-.europe {
-	background-color: #E3F6B9;
-}
-
-.namerica {
-	background-color: #B9F6F3;
-}
-
-.samerica {
-	background-color: #C1DBF7;
-}
-
-.oceania {
-	background-color: #F9CEF9;
-}
-
-.camerica{
-	background-color: #B9ECF6;
-}
-
-.australia {
-	background-color: #F9CEE4;
-}
-
 /*hover info box*/
 .hoverbox{
 	z-index:99;
@@ -185,4 +152,43 @@ body,html {
 	-moz-opacity: 0;
 	opacity: 0;
 }
+
+
+
+.asia {
+	background-color: #F6C4B9;
+}
+
+.africa {
+	background-color: #F2E798;
+}
+
+.europe {
+	background-color: #E3F6B9;
+}
+
+.namerica {
+	background-color: #B9F6F3;
+}
+
+.samerica {
+	background-color: #C1DBF7;
+}
+
+.oceania {
+	background-color: #F9CEF9;
+}
+
+.camerica{
+	background-color: #B9ECF6;
+}
+
+.australia {
+	background-color: #F9CEE4;
+}
+
+.red {
+	border: solid 3px #dd9999;
+}
+
 /*main*/
