Rationalise 2 button set up functions into 1 function

--- a/style.css
+++ b/style.css
@@ -50,6 +50,11 @@ body,html {
 
 /*sidebar*/
 
+.sideblock {
+	margin-bottom: 2rem;
+	overflow: hidden;
+}
+
 .button{
 	float: left;
 	width: 100%;
